--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -90,6 +90,7 @@
       <Filter>details</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_threadid.h" />
+    <ClInclude Include="brendancuda_getmemloc.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fields">
