--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="brendancuda_copytype.h" />
     <ClInclude Include="brendancuda_crossassigns.h" />
     <ClInclude Include="brendancuda_cudaconstexpr.h" />
+    <ClInclude Include="brendancuda_details_fieldbase.h" />
     <ClInclude Include="brendancuda_details_fillwith.h" />
     <ClInclude Include="brendancuda_details_getintbin.h" />
     <ClInclude Include="brendancuda_dimensionedbase.h" />
