--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -91,6 +91,9 @@
       <Filter>details</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_dimensionedbase.h" />
+    <ClInclude Include="brendancuda_details_fieldbase.h">
+      <Filter>details</Filter>
+    </ClInclude>
     <ClInclude Include="brendancuda_copytype.h" />
   </ItemGroup>
   <ItemGroup>
