Added ...dfieldbase.h and used in ...dfield.h

--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -95,6 +95,9 @@
       <Filter>details</Filter>
     </ClInclude>
     <ClInclude Include="brendancuda_copytype.h" />
+    <ClInclude Include="brendancuda_details_dfieldbase.h">
+      <Filter>details</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fields">
