--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -43,6 +43,7 @@
     <ClInclude Include="rand_randomizer.h" />
     <ClInclude Include="details_mfieldbase.h" />
     <ClInclude Include="fields_mfield.h" />
+    <ClInclude Include="fields_mdfield.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="binary_basic.cu" />
