--- a/BrendanCUDA.vcxproj
+++ b/BrendanCUDA.vcxproj
@@ -112,6 +112,7 @@
     <ClInclude Include="details_fillwith.h" />
     <ClInclude Include="details_getintbin.h" />
     <ClInclude Include="details_mfieldbase.h" />
+    <ClInclude Include="dexpr_exprs.h" />
     <ClInclude Include="dimensionedbase.h" />
     <ClInclude Include="errorhelp.h" />
     <ClInclude Include="fields_instance.h" />
