--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -44,7 +44,7 @@
     <ClInclude Include="details_mfieldbase.h" />
     <ClInclude Include="fields_mfield.h" />
     <ClInclude Include="fields_mdfield.h" />
-    <ClInclude Include="dexpr_exprs.h" />
+    <ClInclude Include="exprs.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="binary_basic.cu" />
