Fixed filter misplacement of allheaders.cuh

--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -134,7 +134,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="allheaders.cuh">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
