--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -141,9 +141,6 @@
     <CudaCompile Include="ai.cu">
       <Filter>Source Files</Filter>
     </CudaCompile>
-    <CudaCompile Include="ai_evol_evolver.cpp">
-      <Filter>Source Files</Filter>
-    </CudaCompile>
     <CudaCompile Include="binary_basic.cu">
       <Filter>Source Files</Filter>
     </CudaCompile>
@@ -171,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="copyblock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ai_evol_evolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
