--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up CUDA
-      uses: NVIDIA/setup-cuda@v1
+      uses: Jimver/cuda-toolkit@v0.2.17
       with:
         version: '12.6'
 
