Changed back CUDA install method

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       uses: Jimver/cuda-toolkit@v0.2.17
       with:
         cuda: '12.1.0'
-        method: 'network'
+        method: 'local'
         sub-packages: '["nvcc", "cudart", "cublas", "cublas_dev", "thrust", "visual_studio_integration"]'
 
     - name: Set up MSBuild
