--- a/BrendanCUDA.vcxproj.filters
+++ b/BrendanCUDA.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClInclude Include="allheaders.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="uniqueid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="ai.cu">
@@ -165,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ai_evol_evolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="uniqueid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
