Attempted to fix installer call

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Set up MSBuild
       run: |
-        start /wait "" ".\testing\vs_BuildTools.exe" /quiet /norestart
+        & ".\testing\vs_BuildTools.exe" /quiet /norestart
 
     - name: Confirm MSBuild Version
       run: |
